--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "angular": "^1.7.9",
     "core-js": "^2.6.9",
     "rxjs": "6.5.2",
+    "tslib": "^1.10.0",
     "typescript": "3.7",
-    "zone.js": "0.9.1"
+    "zone.js": "~0.10.2"
   },
   "scripts": {
     "ng": "ng",
@@ -28,5 +29,9 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~0.901.2",
+    "codelyzer": "^5.1.2"
   }
 }
