--- a/package.json
+++ b/package.json
@@ -6,18 +6,19 @@
     "@angular-devkit/core": "8.1.2",
     "@angular-devkit/schematics": "8.1.2",
     "@angular/cli": "^9.1.3",
-    "@angular/common": "8.1.2",
-    "@angular/compiler": "8.1.2",
-    "@angular/compiler-cli": "8.1.2",
-    "@angular/core": "8.1.2",
-    "@angular/forms": "8.1.2",
-    "@angular/platform-browser": "8.1.2",
-    "@angular/platform-browser-dynamic": "8.1.2",
-    "@angular/router": "8.1.2",
+    "@angular/common": "9.1.3",
+    "@angular/compiler": "9.1.3",
+    "@angular/compiler-cli": "9.1.3",
+    "@angular/core": "9.1.3",
+    "@angular/forms": "9.1.3",
+    "@angular/platform-browser": "9.1.3",
+    "@angular/platform-browser-dynamic": "9.1.3",
+    "@angular/router": "9.1.3",
     "@ionic/angular": "^5.0",
     "angular": "^1.7.9",
     "core-js": "^2.6.9",
-    "rxjs": "6.5.2",
+    "font-awesome": "^4.7.0",
+    "rxjs": "6.5.5",
     "tslib": "^1.10.0",
     "typescript": "3.7",
     "zone.js": "~0.10.2"
