--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "rxjs": "6.5.5",
     "tslib": "^1.10.0",
     "typescript": "3.7",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "@ionic-native/core": "^5.24.0",
+    "@ionic-native/splash-screen": "^5.24.0",
+    "@ionic-native/status-bar": "^5.24.0"
   },
   "scripts": {
     "ng": "ng",
