--- a/package.json
+++ b/package.json
@@ -5,15 +5,22 @@
   "dependencies": {
     "@angular-devkit/core": "8.1.2",
     "@angular-devkit/schematics": "8.1.2",
+    "@angular/animations": "9.1.3",
+    "@angular/cdk": "^9.2.2",
     "@angular/cli": "^9.1.3",
     "@angular/common": "9.1.3",
     "@angular/compiler": "9.1.3",
     "@angular/compiler-cli": "9.1.3",
     "@angular/core": "9.1.3",
     "@angular/forms": "9.1.3",
+    "@angular/material": "^9.2.2",
     "@angular/platform-browser": "9.1.3",
     "@angular/platform-browser-dynamic": "9.1.3",
     "@angular/router": "9.1.3",
+    "@covalent/core": "^3.0.1",
+    "@ionic-native/core": "^5.24.0",
+    "@ionic-native/splash-screen": "^5.24.0",
+    "@ionic-native/status-bar": "^5.24.0",
     "@ionic/angular": "^5.0",
     "angular": "^1.7.9",
     "core-js": "^2.6.9",
@@ -21,10 +28,7 @@
     "rxjs": "6.5.5",
     "tslib": "^1.10.0",
     "typescript": "3.7",
-    "zone.js": "~0.10.2",
-    "@ionic-native/core": "^5.24.0",
-    "@ionic-native/splash-screen": "^5.24.0",
-    "@ionic-native/status-bar": "^5.24.0"
+    "zone.js": "~0.10.2"
   },
   "scripts": {
     "ng": "ng",
