--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "e2e": "ng e2e"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.2",
+    "@angular-devkit/build-angular": "^0.901.8",
     "codelyzer": "^5.1.2"
   }
 }
