--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng build && ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
