--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "e2e": "ng e2e",
     "build:universal": "npm run build:client-and-server-bundles && npm run webpack:server && workbox generate:sw",
     "serve:universal": "node www/server.js",
-    "build:client-and-server-bundles": "ng build --prod --build-optimizer && ng build --prod --build-optimizer --app 1 --output-hashing=false",
+    "build:client-and-server-bundles": "ng build --prod --build-optimizer && ng build --prod --build-optimizer --app 1 --output-hashing=false"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.901.8",
