--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "scripts": {
     "ng": "ng",
     "heroku-prebuild": "npm install",
+    "heroku-postbuild": "npm run build:universal",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
