--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   },
   "scripts": {
     "ng": "ng",
-    "heroku-prebuild": "npm install && npm run build",
+    "heroku-prebuild": "npm install && npm run build:client-and-server-bundles",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
@@ -47,7 +47,7 @@
     "e2e": "ng e2e",
     "build:universal": "npm run build:client-and-server-bundles && npm run webpack:server && workbox generate:sw",
     "serve:universal": "node server.js",
-    "build:client-and-server-bundles": "ng build --prod --build-optimizer && ng build --prod --build-optimizer --app 1 --output-hashing=false"
+    "build:client-and-server-bundles": "ng build --prod --build-optimizer && ng build --prod --build-optimizer --app 1 --output-hashing=all"
   },
   "devDependencies": {
     "codelyzer": "^5.1.2"
