Configurando PWA para deploy no heroku.

--- a/angular.json
+++ b/angular.json
@@ -12,7 +12,7 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "aot": true,
-            "outputPath": "www/browser",
+            "outputPath": "www",
             "index": "src/index.html",
             "main": "src/main.ts",
             "tsConfig": "src/tsconfig.app.json",
