--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "scripts": {
     "ng": "ng",
+    "heroku-prebuild": "npm install",
     "heroku-postbuild": "ionic build --prod",
     "start": "ng serve --prod",
     "build": "ng build",
