Corrigindo tela dos pedidos.

--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "ng": "ng",
     "heroku-prebuild": "npm install",
     "heroku-postbuild": "ng build --prod",
-    "start": "node --max_old_space_size=4096 server.js --prod",
+    "start": "ng serve",
+    "start-prod": "node --max_old_space_size=4096 server.js --prod",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
