--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "core-js": "^2.6.9",
     "express": "^4.15.2",
     "font-awesome": "^4.7.0",
+    "ngx-device-detector": "^1.4.5",
     "rxjs": "6.5.5",
     "ts-loader": "^3.1.1",
     "tslib": "^1.13.0",
