--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,9 +1,9 @@
 {
-  "short_name": "PWA-R",
+  "short_name": "Meu Restaurante",
   "name": "Meu Restaurante",
   "start_url": "index.html",
-  "description": "PWA do projeto Meu Restaurante baseado em Ionic.",
-  "theme_color": "#f48c5b",
+  "description": "O seu restaurante popular virtual.",
+  "theme_color": "#b30000",
   "background_color": "#ffffff",
 
   "display": "standalone",
@@ -11,32 +11,32 @@
 
   "icons": [
     {
-      "src": "/assets/images/icons/android-chrome-192x192.png",
+      "src": "/assets/images/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/assets/images/icons/android-chrome-512x512.png",
+      "src": "/assets/images/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     },
     {
-      "src": "/assets/images/icons/android-chrome-96x96.png",
+      "src": "/assets/images/icons/icon-96x96.png",
       "sizes": "96x96",
       "type": "image/png"
     },
     {
-      "src": "/assets/images/icons/android-chrome-128x128.png",
+      "src": "/assets/images/icons/icon-128x128.png",
       "sizes": "128x128",
       "type": "image/png"
     },
     {
-      "src": "/assets/images/icons/android-chrome-144x144.png",
+      "src": "/assets/images/icons/icon-144x144.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "/assets/images/icons/android-chrome-152x152.png",
+      "src": "/assets/images/icons/icon-152x152.png",
       "sizes": "152x152",
       "type": "image/png"
     }
