--- a/angular.json
+++ b/angular.json
@@ -18,7 +18,7 @@
             "tsConfig": "src/tsconfig.app.json",
             "polyfills": "src/polyfills.ts",
             "assets": [
-              "src/favicon.ico",
+              "src/assets/images/icons/favicon.ico",
               "src/manifest.json",
               {
                 "glob": "**/*",
@@ -100,7 +100,7 @@
             ],
             "assets": [
               "src/assets",
-              "src/favicon.ico",
+              "src/assets/images/icons/favicon.ico",
               "src/manifest.json"
             ]
           }
