--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express": "^4.15.2",
     "font-awesome": "^4.7.0",
     "ngx-device-detector": "^1.4.5",
+    "ngx-pipes": "^2.7.3",
     "rxjs": "6.5.5",
     "ts-loader": "^3.1.1",
     "tslib": "^1.13.0",
